WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223395
[Nicosia] Backport cocoa fix for RTL sticky position from
r273982
https://bugs.webkit.org/show_bug.cgi?id=223395
Summary
[Nicosia] Backport cocoa fix for RTL sticky position from r273982
Lauro Moura
Reported
2021-03-17 13:16:03 PDT
[Nicosia] Backport cocoa fix for RTL sticky position from
r273982
Attachments
Patch
(1.80 KB, patch)
2021-03-17 13:17 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2021-03-17 13:17:01 PDT
Created
attachment 423519
[details]
Patch
EWS
Comment 2
2021-03-18 04:09:28 PDT
Committed
r274639
: <
https://commits.webkit.org/r274639
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423519
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-18 04:10:29 PDT
<
rdar://problem/75567893
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug