[Nicosia] Backport cocoa fix for RTL sticky position from r273982 https://bugs.webkit.org/show_bug.cgi?id=223395

Reviewed by Adrian Perez de Castro.

Fixes fast/css/sticky/sticky-in-rtl-overflow.html for WPE.

* page/scrolling/nicosia/ScrollingTreeStickyNode.cpp:
(WebCore::ScrollingTreeStickyNode::computeLayerPosition const):


Canonical link: https://commits.webkit.org/235466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274639 268f45cc-cd09-0410-ab3c-d52691b4dbfc