Source/WebCore/page/scrolling/nicosia/ScrollingTreeStickyNode.cpp
@@ -118,7 +118,7 @@ FloatPoint ScrollingTreeStickyNode::computeLayerPosition() const
             constrainingRect = frameScrollingNode.layoutViewport();
         } else {
             auto& overflowScrollingNode = downcast<ScrollingTreeOverflowScrollingNode>(scrollingNode);
-            constrainingRect = FloatRect(overflowScrollingNode.currentScrollPosition(), m_constraints.constrainingRectAtLastLayout().size());
+            constrainingRect = FloatRect(overflowScrollingNode.currentScrollOffset(), m_constraints.constrainingRectAtLastLayout().size());
         }
         return m_constraints.layerPositionForConstrainingRect(constrainingRect);
     };
